디데이 계산 구조체 및 타이머 적용했으나 타이머 오류 발생

--- a/dateFormat/Base.lproj/Main.storyboard
+++ b/dateFormat/Base.lproj/Main.storyboard
@@ -134,6 +134,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="datePicker" destination="BZl-7w-IEg" id="jd2-nm-OUz"/>
                         <outlet property="day100Label" destination="sHu-xN-fTw" id="SkU-tZ-ltx"/>
                         <outlet property="day200Label" destination="xF8-WF-axl" id="uJy-bv-Hpt"/>
                         <outlet property="day300Label" destination="0pa-AQ-kj0" id="qaB-HA-CQw"/>
